--- a/sections/references.bib
+++ b/sections/references.bib
@@ -192,3 +192,10 @@ author = {Yoshua Bengio}
   pages = {129},
   URL = {https://www.amazon.com/Digital-Design-Computer-Architecture-Second/dp/0123944244?SubscriptionId=0JYN1NVW651KCA56C102&tag=techkie-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0123944244}
 }
+
+@misc{deepdga,
+Author = {Hyrum S. Anderson and Jonathan Woodbridge and Bobby Filar},
+Title = {DeepDGA: Adversarially-Tuned Domain Generation and Detection},
+Year = {2016},
+Eprint = {arXiv:1610.01969},
+}
