--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,24 @@
 \usepackage{url}
 \usepackage[hidelinks]{hyperref}
 \usepackage{todonotes}
+%aaai%
 \usepackage{float}
+\usepackage{times}
+\usepackage{helvet}
+\usepackage{courier}
+\usepackage{times}
+\usepackage{url}
+\usepackage{latexsym}
+\usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage{graphicx}
+\usepackage{multirow}
+\usepackage{tabularx}
+\usepackage{lineno}
+\usepackage[font=small,labelfont=bf]{caption}
+\usepackage{booktabs}
+\DeclareMathOperator{\Tr}{Tr}
+
 % custom colors
 \usepackage{color}
 \definecolor{light-gray}{gray}{0.96}
