--- a/sections/progetto.tex
+++ b/sections/progetto.tex
@@ -174,26 +174,24 @@ In figura \ref{fig:autoencoder1} è mostrata la struttura di massima dell'autoen
 \end{figure}
 
 \subsubsection{Encoder}
-La composizione interna dell'\textit{encoder} è formata da una Rete Convoluzionale accoppiata ad una LSTM. A differenza del lavoro proposto in \cite{deepdga}, si è voluto mantenere la composizione dell'autoencoder il piu semplice possibile, in quanto la trasformazione in \textit{GAN} ed il suo \textit{tuning} in fase di \textit{training} è notoriamente difficoltoso, in presenza di molti parametri. 
-Come mostrato in \cite{1508.06615} le reti convoluzionali sono in grado di cogliere le \textit{features} più importanti in una sequenza di caratteri. Nel modello utilizzato si indichi $\mathbb{V}$ come vocabolario dei caratteri ammissibili per i domini di rete, $d$ la dimensione dei domini codificati, and $\mathbf{Q} \in \mathbb{R}^{d \times |\mathcal{C}|}$  la matrice di codifica dei caratteri. Sia supposto che il dominio $k \in \mathcal{V}$ sia composto da una sequenza di caratteri $[c_1, \dots, c_{l}]$, dove $l$ è la lunghezza del dominio $k$.
-Allora la rappresentazione a livello di caratteri di $k$ è data dalla matrice $\mathbf{C}^k \in \mathbb{R}^{d \times l}$, dove la $j$ma colonna corrisponde alla codifica dei caratteri per $c_j$.
-Si applichi una convoluzione tra $\mathbf{C}^k$  ed un \textit{fitro} (o \textit{kernel}) $\mathbf{H} \in \mathbb{R}^{d \times w}$ di larghezza $w$, al quale viene aggiunto un \textit{bias} ed una non linearità per ottenere una \textit{feature map} $\mathbf{f}^k \in \mathbb{R}^{l - w + 1}$. In particolare l'$i$mo elemento di $\mathbf{f}^k$ è dato da:
-$$\mathbf{f}^k[i] = \mbox{tanh}(\langle \mathbf{C}^k[\ast, i:i+w-1], \mathbf{H} \rangle + b)$$
+La composizione interna dell'\textit{encoder} è formata da una Rete Convoluzionale accoppiata ad una LSTM. A differenza del lavoro proposto in \cite{deepdga}, si è voluto mantenere la composizione dell'autoencoder il più semplice possibile, in quanto la trasformazione in \textit{GAN} ed il suo \textit{tuning} in fase di \textit{training} è notoriamente difficoltoso, in presenza di molti parametri. 
 
-where $\mathbf{C}^k[\ast, i:i+w-1]$ è la colonna da $i$ ad $(i+w-1)$ di $\mathbf{C}^k$ ed $$ \langle \mathbf{A}, \mathbf{B} \rangle = \Tr(\mathbf{A}\mathbf{B}^T)$$ è il prodotto interno di Frobenius.
+<cos'è una rete convoluzionale> 
 
-Finally, we take the {\em max-over-time}
-\begin{equation}
-y^k = \max_{i} \mathbf{f}^k[i]
-\end{equation}
-as the feature corresponding to the filter $\mathbf{H}$ (when applied to word $k$). The idea is to capture the most important
-feature---the one with the highest value---for a given filter. A filter is essentially picking out
-a character $n$-gram, where the size of the $n$-gram corresponds to the filter width.
+La Rete Convoluzionale è formata da un layer convoluzionale, in grado di cogliere pattern locali all'interno dei domini, con l'obiettivo di rilevare n-grammi significativi presenti nei domini reali e poterli successivamente riprodurre in maniera sintetica all'interno della GAN. 
+Parte integrante di una rete convoluzionale è il livello di \textit{pooling}, in cui le features piu importanti del livello precedente vengono ridotte in un tensore di dimensione secondo il valor medio. La decisione di utilizzare average pooling anziche max pooling è stata presa a causa dell'elevata instabilità intrinseca alle GAN, per le quali max pooling è un fattore contribuente. 
 
-We have described the process by which {\em one} feature is obtained from {\em one} filter matrix. Our CharCNN uses multiple filters of 
-varying widths to obtain the feature vector for $k$. So if we have a total of $h$ filters $\mathbf{H}_1, \dots, \mathbf{H}_h$, 
-then $\mathbf{y}^k = [y^k_1, \dots, y^k_h]$ is the input representation of $k$. For many NLP applications $h$ is typically chosen to be in $[100,1000]$.
 
+
+<batch normalization>
+
+<leaky relu perchè>
+<dropout> 
+
+
+Seconda fase della sottorete Encoder è la presenza di una Long Short-term Memory Network. 
+<cos'è una lstm>
+<perchè usarla>
 
 \begin{figure}[htbp]
     \centering
@@ -201,14 +199,6 @@ then $\mathbf{y}^k = [y^k_1, \dots, y^k_h]$ is the input representation of $k$. 
 	\caption{Struttura dell'\textit{encoder}. I}
 \label{fig:encoder}
 \end{figure}
-
-encoder diagram
-
-CNN+diagramm
-average pooling why
-
-LSTM + diagram
-
 
 \subsubsection{Decoder}
 descrizione
