--- a/sections/references.bib
+++ b/sections/references.bib
@@ -199,3 +199,21 @@ Title = {DeepDGA: Adversarially-Tuned Domain Generation and Detection},
 Year = {2016},
 Eprint = {arXiv:1610.01969},
 }
+
+@article{LSTM,
+author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+year = {1997},
+month = {12},
+pages = {1735-80},
+title = {Long Short-term Memory},
+volume = {9},
+booktitle = {Neural computation}
+}
+
+@misc{lstmblog,
+author = {Christopher Olah},
+year = {2015},
+number = {August 27},
+type = {Blog},
+howpublished = {\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
+ }
