--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 %\usepackage{indentfirst}
 
 % other packages
+\usepackage{standalone}
 \usepackage{array}
 \usepackage{subfigure}
 \usepackage{graphicx}
